# korri-n2k-examples

./: .gitignore  README.md  learn_embed.org  rust-analyzer.toml
arm/stm32-g431-cbu6/: Cargo.toml  embed.toml
arm/stm32-g431-cbu6/src/: ports.rs  simple.rs
arm/stm32/g431-cbu6/: Cargo.toml  Justfile  build.rs  memory.x
arm/stm32/g431-cbu6/.cargo/: config.toml
arm/stm32/g431-cbu6/.helix/: languages.toml
arm/stm32/g431-cbu6/src/: app.rs  conf.rs  lib.rs  main.rs  manager_service.rs  ports.rs  ports_txrx.rs  simple.rs  starter.rs
arm/stm32/g431-cbu6/src/instances/: inst1.rs  inst2.rs
arm/stm32/g431-cbu6/src/tasks/: ac_input_127503.rs  ais_class_a_129038.rs  ais_class_b_129039.rs  datum_129044.rs  navigation_129284.rs  position_129025.rs  speed_128259.rs
linux/socketcan/: Cargo.toml  cross.toml
linux/socketcan/src/: main.rs
risc-v/esp32-c3/: Cargo.toml  Justfile
risc-v/esp32-c3/.cargo/: config.toml
risc-v/esp32-c3/src/: lib.rs  manager_service.rs  ports.rs  timer.rs
risc-v/esp32-c3/src/pgns/: ac_input_127503.rs  ais_class_a_129038.rs  ais_class_b_129039.rs  alert_text_126985.rs  datum_129044.rs  depth_128267.rs  engine_127488.rs  engine_127489.rs  environmental_130310.rs  heading_control_127237.rs  heartbeat_126993.rs  navigation_129284.rs  position_129025.rs  rudder_127245.rs  speed_128259.rs
shared-core/: Cargo.toml
shared-core/src/: format.rs  lib.rs
shared-core/src/pgns/: ac_input_127503.rs  ais_class_a_129038.rs  ais_class_b_129039.rs  alert_text_126985.rs  datum_129044.rs  depth_128267.rs  engine_127488.rs  engine_127489.rs  environmental_130310.rs  heading_control_127237.rs  heartbeat_126993.rs  mod.rs  navigation_129284.rs  position_129025.rs  rudder_127245.rs  speed_128259.rs
xtensa/esp32-s3/: .gitignore  Cargo.toml  Embed.toml  Justfile
xtensa/esp32-s3/.cargo/: config.toml
xtensa/esp32-s3/src/: app.rs  conf.rs  lib.rs  manager_service.rs  ports.rs  starter.rs  timer.rs  web_bridge.rs
xtensa/esp32-s3/src/capture/: can_reader.rs  frame.rs  mod.rs  usb_sink.rs  wire.rs
xtensa/esp32-s3/src/instances/: inst3.rs  inst4.rs  inst5.rs  mod.rs
xtensa/esp32-s3/src/pgns/: ac_input_127503.rs  ais_class_a_129038.rs  ais_class_b_129039.rs  alert_text_126985.rs  datum_129044.rs  depth_128267.rs  engine_127488.rs  engine_127489.rs  environmental_130310.rs  heading_control_127237.rs  heartbeat_126993.rs  navigation_129284.rs  position_129025.rs  rudder_127245.rs  speed_128259.rs
xtensa/esp32-s3/src/tasks/: alert_text_126985.rs  depth_128267.rs  engine_127488.rs  engine_127489.rs  environmental_130310.rs  heading_control_127237.rs  heartbeat_126993.rs  mod.rs  rudder_127245.rs
xtensa/esp32-s3/tools/: decode_capture.py
