[package]
name = "socketcan-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
korri-n2k = "0.2.0"
socketcan = "3.3.0"
anyhow = "1.0"
chrono = "0.4"

# [profile.release]
# lto = false
# codegen-units = 1
# panic = "abort"
# opt-level = "s"

# [target.armv7-unknown-linux-gnueabihf]
# linker = "arm-linux-gnueabihf-gcc"
