[package]
edition      = "2021"
name         = "esp32-s3"
rust-version = "1.86"
version      = "0.1.0"

# [[bin]]
# name = "transmit"
# path = "./src/bin/transmit.rs"

[[bin]]
name = "talker"
path = "./src/bin/talker.rs"

[[bin]]
name = "talker_fight1"
path = "./src/bin/talker_fight1.rs"

[[bin]]
name = "talker_fight2"
path = "./src/bin/talker_fight2.rs"

[[bin]]
name = "talker_fatpacket"
path = "./src/bin/talker_fatpacket.rs"

[[bin]]
name = "receiver"
path = "./src/bin/receiver.rs"

[[bin]]
name = "feeder"
path = "./src/bin/feeder.rs"

[[bin]]
name = "once"
path = "./src/bin/once.rs"


[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["defmt", "esp32s3", "unstable"] }
embassy-executor = { version = "0.7.0", features = ["executor-thread"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32s3"] }

embassy-time     = { version = "0.5"}
embassy-sync = "0.6.2"
embedded-can = "0.4.1"

embassy-futures = "0.1.2"

korri-n2k = "0.1.1"
critical-section = "1.2.0"
defmt = "0.3"
defmt-rtt = "1.0"
esp-println      = { version = "0.15.0", features = ["esp32s3", "defmt-espflash"] }
esp-backtrace = { version = "0.17.0", features = [ "defmt"]}
nb = "1.0"
static_cell = "2.1.1"
embedded-io-async = "0.6"


# WiFi dependencies (optional, only for nmea2k_wifi_bridge)
esp-wifi = { version = "0.13.0", optional = true, features = ["esp32s3", "wifi"] }
embassy-net = { version = "0.6.0", optional = true, features = ["tcp", "dhcpv4", "medium-ethernet"] }
heapless = { version = "0.8", optional = true, default-features = false }
[features]
default = []
wifi = ["esp-wifi", "embassy-net", "heapless"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
