[package]
edition      = "2021"
name         = "esp32-s3"
version      = "0.1.0"

[[bin]]
name = "total"
path = "./src/bin/total.rs"

[[bin]]
name = "simple"
path = "./src/bin/simple.rs"

[[bin]]
name = "fast_packet"
path = "./src/bin/fast_packet.rs"

[[bin]]
name = "dual_run_1"
path = "./src/bin/dual_run_1.rs"

[[bin]]
name = "dual_run_2"
path = "./src/bin/dual_run_2.rs"

[[bin]]
name = "stress_all"
path = "./src/bin/stress_all.rs"

[[bin]]
name = "sniffer"
path = "./src/bin/sniffer.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["defmt", "esp32s3", "unstable"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32s3"] }

critical-section = "1.2.0"
nb = "1.0"
static_cell = "2.1.1"

embassy-executor = { version = "0.7", features = ["executor-thread", "task-arena-size-32768"] }
embedded-io-async = "0.6"
embassy-time     = { version = "0.5"}
embassy-sync = "0.6.2"
embedded-can = "0.4.1"
embassy-futures = "0.1.2"

defmt = "1.0"
defmt-rtt = "1.0"
esp-backtrace = { version = "0.17.0", features = ["defmt", "esp32s3", "panic-handler", "exception-handler"] }

korri-n2k = "0.3"
shared-core = { path = "../../shared-core" }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
