[package]
name = "g431-cbu6"
version = "0.1.0"
edition = "2024"

[dependencies]
# runtime async
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread"] }
embassy-time     = { version = "0.5", features = ["tick-hz-32_768"] }
embassy-sync = "0.6.2"
embassy-stm32 = { version = "0.6", features = [
  "stm32g431cb",
  "time-driver-any",
  "exti",
]}

# bare_metal
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
static_cell = "2.1.1"

# logs / panic
defmt = "1.0"
defmt-rtt = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# n2k
korri-n2k = "0.4"
shared-core = { path = "../../../shared-core" }
embedded-can = "0.4"

[[bin]]
name = "total"
path = "./src/bin/total.rs"

[[bin]]
name = "simple"
path = "./src/bin/simple.rs"

[[bin]]
name = "fast_packet"
path = "./src/bin/fast_packet.rs"

[[bin]]
name = "dual_run_1"
path = "./src/bin/dual_run_1.rs"

[[bin]]
name = "dual_run_2"
path = "./src/bin/dual_run_2.rs"

[[bin]]
name = "stress_all"
path = "./src/bin/stress_all.rs"


[profile.release]
lto = true
codegen-units = 1
# opt-level = "s"
debug = 2
